feat!: improve parameterized test harness for Cartesian product
The parameterized test harness for Cartesian-product arguments
(`Tests.argumentsStream(..)` and related utilities) is redefined,
moving its implementation to `Assertions` (see
`cartesianArgumentsStream(..)`). Now `generateExpected(..)` logic is
merged into `assertParameterized(..)` and the expected result list
generation is configured via `ExpectedGeneration` within the call to
that method; the generated source code is automatically copied to
clipboard for effortless preparation and maintenance of the test cases.
`assertParameterizedOf(..)` combines `evalParameterized(..)` and
`assertParameterized(..)` for the sake of conciseness.

BREAKING CHANGE: Definitions of Cartesian-product arguments for
parameterized tests moved to `Assertions`.